--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build:browser:prod": "ng build --prod",
     "build:prod": "npm run build:server:prod && npm run build:browser:prod",
     "build-prod": "bash ./scripts/ng.sh build --prod --aot",
-    "server": "node local.js"
+    "server": "node local.js",
+    "ghpages": "ngh --no-silent --name=\"antimamewara\" --email=\"antimamewara007@gmail.com\""
   },
   "private": true,
   "dependencies": {
@@ -39,6 +40,7 @@
     "core-js": "^2.5.4",
     "cors": "~2.8.4",
     "ng2-search-filter": "^0.5.1",
+    "ngh": "^0.2.12",
     "ngx-dexie": "^1.1.0",
     "rxjs": "~6.3.3",
     "webpack-cli": "^2.1.4",
