--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@nguniversal/express-engine": "^6.0.0",
     "@nguniversal/module-map-ngfactory-loader": "^6.0.0",
     "@ngx-translate/core": "^11.0.0",
+    "angular-cli-ghpages": "^0.6.0-rc.2",
     "core-js": "^2.5.4",
     "cors": "~2.8.4",
     "ng2-search-filter": "^0.5.1",
