--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ng2-search-filter": "^0.5.1",
     "ngh": "^0.2.12",
     "ngx-dexie": "^1.1.0",
+    "ngx-indexed-db": "^2.2.0",
     "rxjs": "~6.3.3",
     "webpack-cli": "^2.1.4",
     "zone.js": "~0.8.26"
